--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
             <p>brand: <span>name</span></p>
             <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
             <p>$249 <span>Delivery</span></p>
-              <input type="number" name="" id="product-count">
-              <input type="submit" value="Add to cart">
+            <button id="reduce"  aria-label="reduce quantity">-</button>
+            <input type="number" name="" id="product-count">
+            <button id="increase" aria-label="increase quantity">+</button>
+            <input type="submit" value="Add to cart">
           </div>
         </div>
       </form>
